org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

	TODO: refresh the drop-down menus in case the ontologies have new versions


2009-03-19
	- Completed fix of issue #45: "include URIs for Topic in the ontmd Topic URI -- 
	  Review operation was removing the topic URI field value.
	  1.0.8.beta (20090319092940)
	 
2009-03-18
	- Issue #45: "include URIs for Topic in the ontmd Topic URI field"  -- 1.0.8.beta (20090318234714)
	  See OndMdServiceImpl, MetadataGroupPanel, Option, MdUtil, MdHelper.
	  - OmvMmi.shortNameUri is now associated with Omv.acronym 
	  - OndMdServiceImpl.prepareOntologyInfo(File file, OntologyInfo ontologyInfo): 
	  	if OmvMmi.shortNameUri is part of the list of attributes, then it also assigns OmvMmi.shortNameUri
	  - MetadataGroupPanel: various adjustments.
	    
	- New version.properties as the single point to define the version for this application
	  (both the back-end services and the front-ends). build.xml translates this to the 
	  application via the web.xml (which is read by Config). Also, a "build number", which 
	  is a timestamp, is used for the full version. An AppInfo object is used to share the
	  application info (version) between server and client. 
	  
	- Now, build.properties include many of the (previously) hard-coded parameters. build.xml 
	  updates the web.xml accordingly and then Config makes the params available to the code. 
	  

2009-03-17
	- Using Voc2RDF, I just created and submitted the following vocabularies (with the
	  current values in the authorities.csv and resourcetypes.csv, respectively):
	       http://mmisw.org/ont/mmi/20090317T183911/authority
	       http://mmisw.org/ont/mmi/20090317T173755/resourcetype
	  A next step is to use these ontologies (instead of the CSV files) to drive the 
	  corresponding drop-down menus.
	  
	  
	- Fixed the ``,,'' issue in voc2rdf: issue #87	
	
	-  Code clean-up:
		- Moved MdHelper from org.mmisw.ont.util/ to org.mmisw.ontmd.gwt.server/